--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 Django = "^3.1.4"
 djangorestframework = "^3.12.2"
 django-filter = "^2.4.0"
+django-crispy-forms = "^1.10.0"
 
 [tool.poetry.dev-dependencies]
 
